Fix more text-align

--- a/base.css
+++ b/base.css
@@ -9,6 +9,7 @@ body { /* font-family +1 */
 
 h1 { /* font-size +1  font-weight +1 */
 	font-family: Optima;
+	text-align: center;
 	font-size: 6vw; 
 	font-weight: 200;
 	color: white;
@@ -22,6 +23,7 @@ h1 { /* font-size +1  font-weight +1 */
 
 h2 {
 	font-family: Optima;
+	text-align: center;
 	font-size: 2em;
 	font-weight: 100;
 	background-color: rgb(74, 74, 125);
@@ -35,6 +37,7 @@ h2 {
 
 .intro-blurb { /* class +1  font-style +1 */
 	font-style: italic;
+	text-align: center;
 }
 
 .content { /* class +1 */  /* text-indent +1 */
